--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ output/check linked list if circular ornot
 output/reverse a string using stack
 output/jat
 output/del the middle of stack
+output/push at bottom of stack
