--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ output/reverse a string using stack
 output/jat
 output/del the middle of stack
 output/push at bottom of stack
+output/reverse a stack
