--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ output/jat
 output/del the middle of stack
 output/push at bottom of stack
 output/reverse a stack
+output/top element in the bottom stack
