--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ output/del the middle of stack
 output/push at bottom of stack
 output/reverse a stack
 output/top element in the bottom stack
+output/insert atbottomstack
