--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ output/push at bottom of stack
 output/reverse a stack
 output/top element in the bottom stack
 output/insert atbottomstack
+output/sort the stack
