--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ output/reverse a stack
 output/top element in the bottom stack
 output/insert atbottomstack
 output/sort the stack
+output/Queque formation
+output/queue formation 
+output/queue formation 
