--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 output/check linked list if circular ornot
 output/reverse a string using stack
-output/jat
+
 output/del the middle of stack
 output/push at bottom of stack
 output/reverse a stack
@@ -12,3 +12,9 @@ output/queue formation
 output/queue formation 
 output/binary tree
 output/reverse a queue
+a.out
+output/jat
+.gitignore
+output/meds.txt
+output/test
+output/meds.dat
