--- a/outputf.in
+++ b/outputf.in
@@ -17,3 +17,42 @@ Print tree
 220
 999
 
+preoder
+500 
+150 
+90 
+111 
+250 
+170 
+220 
+600 
+501 
+650 
+1000 
+999 
+post
+111 
+90 
+220 
+170 
+250 
+150 
+501 
+999 
+1000 
+650 
+600 
+500 
+inorder
+90 
+111 
+150 
+170 
+220 
+250 
+500 
+501 
+600 
+650 
+999 
+1000 
